# jklm

./: CMakeLists.txt  game.cpp  game.h  helpers.cpp  helpers.h  jklm.cpp  jklm.h  vcpkg.json
Database/: database.cpp  database.h  databasestructure.cpp  databasestructure.h
Dictionary/: dictionaryapi.cpp  dictionaryapi.h
test-build/: .ninja_deps  .ninja_log  build.ninja
test-build/.cmake/api/v1/reply/: cache-v2-5769fd1997ece801f453.json  cmakeFiles-v1-724af8efce0bea661405.json  codemodel-v2-bdaaa25fceb10f8f44ec.json  index-2025-03-27T13-50-41-0676.json  target-jklm-Debug-a1c4a2412ed372088517.json  toolchains-v1-657a83382e4fdc23c333.json
